# C-Basico

./: .gitignore  HelloWolrd.c  P2.1
First/: CMakeLists.txt  P1.rap  Programa-1.2.c  Programa-1.3.c  Programa-1.c
P10/: CMakeLists.txt  P10.c  P10.rap  P10.rap.backup0  P10.rap.backup1  P10.rap.backup2
P11/: CMakeLists.txt  P11.rap  P11.rap.backup0  main.c
P12/: CMakeLists.txt  P12.rap  main.c
P13/: CMakeLists.txt  P13.rap  P13.rap.backup0  P13.rap.backup1  P13.rap.backup2  main.c
P14/: CMakeLists.txt  P14.rap  P14.rap.backup0  main.c
P15/: CMakeLists.txt  P15.rap  P15.rap.backup0  main.c
P16/: CMakeLists.txt  P16.rap  main.c
P17/: CMakeLists.txt  P17.rap  main.c
P18/: CMakeLists.txt  P18.rap  P18.rap.backup0  P18.rap.backup1  main.c
P19/: CMakeLists.txt  main.c
P2/: P2.1.c  P2.1.rap  P2.1.rap.backup0  P2.1.rap.backup1  P2.c  P2.rap.backup0  P2.rap.backup1  P2.rap.backup2
P20/: CMakeLists.txt  main.c  p20.rap  p20.rap.backup0
P21/: CMakeLists.txt  P21.rap  main.c
P22/: CMakeLists.txt  P22.rap  main.c
P23/: CMakeLists.txt  P23.rap  main.c
P24/: CMakeLists.txt  P24.c  P24.rap  P24.rap.backup0  P24.rap.backup1  P24.rap.backup2  P24.rap.backup3  main.c
P25/: CMakeLists.txt  P25.rap  P25.rap.backup0  main.c
P26/: CMakeLists.txt  P26.rap  P26.rap.backup0  main.c
P27/: CMakeLists.txt  P27.rap  main.c  (+1 more)
Proyecto-Almacen/Proyecto-Individual/: Almacen-Marai-0.1.c  Almacen-Maria-0.2.1.c  Almacen-Maria-0.2.c  Almacen-Maria-0.3.c  Almacen-Maria-0.4.c  Almacen-Maria-0.6.c  Almacen-Maria-1.0.c  Almacen.txt  CMakeLists.txt  SistemaFrenos.c  main.c
(+74 files in other folders)
