cmake_minimum_required(VERSION 3.27)
project(P30 C)

set(CMAKE_C_STANDARD 11)

add_executable(Proyecto-Individual main.c)
add_executable(Almacen-Marai-0.1.c
        Almacen-Marai-0.1.c)
add_executable(Almacen-Maria-0.2.c Almacen-Maria-0.2.c)
add_executable(Almacen-Maria-0.2.1.c Almacen-Maria-0.2.1.c)
